fix scrollbar for the menu

--- a/www/guanlecoja-ui/src/module/page_with_sidebar/page_with_sidebar.less
+++ b/www/guanlecoja-ui/src/module/page_with_sidebar/page_with_sidebar.less
@@ -26,9 +26,10 @@
     &.active:not(.pinned) .sidebar{
         transform: translate(180px, 0px);
         -webkit-transform: translate(180px, 0px);
-       .sidebar ul {
-            overflow-y: auto;
-        }
+    }
+    /* add scrollbar if the menu is open */
+    &.active .sidebar ul {
+        overflow-y: auto;
     }
     &:not(.active){
 
